--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "vite --config vite.config.ts",
+    "build": "vite build --config vite.config.ts",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-toastify": "^11.0.5",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
